@@ -281,19 +281,6 @@ override_dh_strip:
 	dh_strip --dbg-package=systemd-dbg
 
 override_dh_auto_test:
-ifeq (, $(filter nocheck, $(DEB_BUILD_OPTIONS)))
-	# some tests hang under fakeroot, so disable fakeroot
-	# some tests are known to fail under ancient kernels
-	env -u LD_PRELOAD make -C build-deb check || ( \
-		cd build-deb; \
-		for f in test-*.log; do echo "==== $$f ===="; cat $$f; done; \
-		if [ ! -e /etc/machine-id ]; then echo "/etc/machine-id missing, ignoring test failures"; exit 0; fi; \
-		if linux-version compare "$$(uname -r)" ge 3.13; then \
-		    exit 1; \
-		else \
-		    echo "Ignoring test failure under too old kernel $$(uname -r)"; \
-		fi)
-endif
 
 %:
 	dh $@ --with autoreconf --parallel
