@@ -1,6 +1,7 @@
 systemd (229-4ubuntu4+exo1) xenial; urgency=medium
 
   * Build systemd-sysusers binary, for using in rkt.
+  * Disable tests.
 
  -- Vincent Bernat <bernat@debian.org>  Tue, 05 Jul 2016 09:14:08 +0200
 
